<resources>
    <string name="app_name">Restaurant</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="page_Register">Register</string>

    <string name="action_dashboard">Dashboard</string>
    <string name="action_table">Table</string>
    <string name="action_sell_items">Sell Items</string>
    <string name="action_store">Store</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_logout">Log out</string>

    <string name="menu_product">Product</string>
    <string name="menu_product_type">Product Type</string>
    <string name="menu_discount">Discount</string>
    <string name="menu_table">Table</string>
    <string name="menu_logout">Staff</string>

    <string name="txtSuccess">Success</string>
    <string name="txtWarning">Warning</string>
    <string name="txt_internet_is_not">Internet is not stable.</string>
    <string name="txtWait">Wait</string>
    <string name="txt_loading">loading...</string>

    <string name="error_invalid_company_name">This Company name is invalid</string>
    <string name="error_invalid_first_name">This First Name is invalid</string>
    <string name="error_invalid_last_name">This Last Name is invalid</string>
    <string name="error_invalid_tel">This Tel is invalid</string>
    <string name="error_invalid_email">This Email is invalid</string>
    <string name="error_invalid_user_name">This Username is invalid</string>
    <string name="error_invalid_pass">This password is invalid</string>

    <string name="error_invalid_product_name">This Product name is invalid</string>
    <string name="error_invalid_price">This price is invalid</string>
    <string name="error_invalid_product_type_name">This Product Type name is invalid</string>
    <string name="error_invalid_discount_name">This Discount name is invalid</string>
    <string name="error_invalid_percent">This Percent is invalid</string>
    <string name="error_invalid_count_table">This Count table is invalid</string>
</resources>
