<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/action_dashboard" />
        <item
            android:id="@+id/nav_table"
            android:icon="@drawable/ic_event_seat_black_24dp"
            android:title="@string/action_table" />
        <item
            android:id="@+id/nav_items"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:title="@string/action_sell_items" />
        <item
            android:id="@+id/nav_store"
            android:icon="@drawable/ic_web_black_24dp"
            android:title="@string/action_store" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/action_help" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_keyboard_tab_black_24dp"
            android:title="@string/action_logout" />

    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
